--- a/styles.scss
+++ b/styles.scss
@@ -2,9 +2,16 @@
 
 $darkgrey: #3a3a3a;
 $lightgrey: #cccccc;
+$lightlightgrey: #ededed;
+$grey: #727272;
 $laks: #ffd3b6;
 
 
+
+
+body{
+  margin: 0;
+}
 
 /* HEADER STYLING */
 .header1 {
@@ -14,6 +21,7 @@ $laks: #ffd3b6;
     width: 40%;
     display: block;
     margin: auto;
+    margin-top: 3%;
   }
 }
 /* STYLER NAV BAR*/
@@ -36,8 +44,225 @@ $laks: #ffd3b6;
     font-family: "Apex New";
   }
 }
-
 .navliactive a{
   font-weight: bold;
 }
 
+#shoppingcart{
+  display: none;
+}
+
+main{
+  background-color: $lightlightgrey;
+  padding: 3%;
+}
+
+.linkfront a img{
+  width: 100%;
+}
+.linkfront{
+  margin-bottom: 2%;
+}
+
+.produktfront{
+  img{
+    width: 60%;
+  }
+  text-align: center;
+  font-family: "Apex New";
+  p{
+    color: $grey;
+    margin: 0;
+  }
+  h3{
+    margin: 1%;
+  }
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 2%;
+  padding: 0;
+  input{
+    width: 80%;
+    margin: auto;
+  }
+  textarea{
+    width: 80%;
+    margin: auto;
+    border: none;
+  }
+  .formlabel{
+    width: 80%;
+    margin: auto;
+    font-family: "Apex New";
+    margin-top: 0;
+  }
+  #description{
+    height: 100px;
+  }
+  input[type=file]{
+    background-color: $lightgrey;
+    border: none;
+    color: black;
+    width: 40%;
+    margin: auto;
+    padding: 2%;
+    border-radius: 8px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  input[type=submit]{
+    background-color: $lightgrey;
+    border: none;
+    color: black;
+    width: 20%;
+    margin: auto;
+    padding: 1%;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+  }
+}
+
+.forsidemain{
+  h1{
+    font-family: "American Purpose Casual 01";
+    padding-top: 3%;
+    margin-bottom: 1%;
+    font-size: xx-large;
+    text-align: center;
+  }
+}
+
+footer{
+  .kontaktfelt{
+    width: 60%;
+    margin: auto;
+    .kontaktlink{
+      text-decoration: none;
+      color: black;
+    }
+  }
+  h3{
+    font-family: "American Purpose Casual 01";
+    margin: 5%;
+    text-align: center;
+    font-size: x-large;
+  }
+  p{
+    font-family: "Apex New";
+    margin-top: 0;
+  }
+  img{
+    display: flex;
+    width: 50%;
+    margin: auto;
+    padding-bottom: 3%;
+  }
+}
+
+
+
+@supports (grid-area: auto) {
+
+  /*VISES KUN PÅ TABLET*/
+  @media screen and (min-width: 600px) {
+
+    .header1 {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin: 1% 3%;
+      .logo {
+        img {
+          width: 150px;
+        }
+
+        display: flex;
+      }
+      #shoppingcart {
+        display: block;
+        width: 70px;
+        margin: 0;
+        padding-left: 60px;
+      }
+      .navbar {
+        a {
+          font-size: x-large;
+        }
+      }
+    }
+
+    footer{
+      margin: 1% 3%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-content: center;
+      .kontaktfelt{
+        h3{
+          text-align: left;
+          margin-left: 0;
+          margin-bottom: 1%;
+        }
+        p{
+          font-size: large;
+        }
+        margin: 0;
+      }
+      #footerimage{
+        display: flex;
+        margin: auto 0px auto auto;
+        padding: 0;
+        width: 150px;
+      }
+      .logo{
+        display: flex;
+        align-items: center;
+      }
+    }
+
+    .forsidemain {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-areas: "pic1 pic2" "produktfront produktfront" "upload upload";
+      .pic1 {
+        grid-area: pic1;
+        margin-right: 3%;
+      }
+      .pic2 {
+        grid-area: pic2;
+        margin-left: 3%;
+      }
+      .produktfront {
+        grid-area: produktfront;
+      }
+      .upload {
+        grid-area: upload;
+      }
+
+    }
+
+  }
+
+  @media screen and (min-width: 1000px) {
+
+    .forsidemain{
+      display: grid;
+      grid-template-columns: 50% 16.67% 33.33%;
+      grid-template-areas:
+                          "pic1 pic2 pic2"
+                          "upload upload produktfront";
+      .produktfront img{
+        width: 90%;
+      }
+
+    }
+
+  }
+
+}
