--- a/styles.scss
+++ b/styles.scss
@@ -144,6 +144,77 @@ form{
   }
 }
 
+
+/*SHOP STYLING*/
+.shopmain{
+  padding: 0px;
+}
+
+.sortering{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 3%;
+  select{
+    width: 80%;
+    margin:1% auto;
+    border:1px solid $grey;
+    padding:1%;
+  }
+  button{
+    width: 30%;
+    margin: 1% auto;
+    border: 1px solid  $grey;
+    padding: 1%;
+  }
+}
+.greypro{
+  padding: 3%;
+}
+.whitepro{
+  padding: 3%;
+  background-color: white;
+}
+.produkt{
+  .funktioner{
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 2%;
+  }
+  font-family: "Apex New";
+  text-align: center;
+  img{
+    width: 100%;
+    border-radius: 5px;
+  }
+  p{
+    color: $grey;
+    margin: 0;
+  }
+  h2{
+    margin: 1%;
+  }
+  .kobknap{
+    width: 16%;
+    display: flex;
+    align-items: center;
+    background-color: $lightgrey;
+    border-radius: 5px;
+    img{
+      width: 90%;
+      display: flex;
+      margin: auto;
+    }
+  }
+  .produktnavn{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+  }
+}
+
+
 footer{
   .kontaktfelt{
     width: 60%;
@@ -236,7 +307,9 @@ footer{
     .forsidemain {
       display: grid;
       grid-template-columns: 50% 50%;
-      grid-template-areas: "pic1 pic2" "produktfront produktfront" "upload upload";
+      grid-template-areas:  "pic1 pic2"
+                            "produktfront produktfront"
+                            "upload upload";
       .pic1 {
         grid-area: pic1;
         margin-right: 3%;
@@ -251,6 +324,47 @@ footer{
       .upload {
         grid-area: upload;
       }
+
+    }
+
+    .shopmain{
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-template-areas:
+                          "sortering sortering"
+                          "pro1 pro2"
+                          "pro3 pro4"
+                          "pro5 pro6"
+                          "pro7 pro8";
+
+      .sortering{
+        grid-area: sortering;
+      }
+      .pro1{
+        grid-area: pro2;
+      }
+      .pro2{
+        grid-area: pro1;
+      }
+      .pro3{
+        grid-area: pro3;
+      }
+      .pro4{
+        grid-area: pro4;
+      }
+      .pro5{
+        grid-area: pro6;
+      }
+      .pro6{
+        grid-area: pro5;
+      }
+      .pro7{
+        grid-area: pro7;
+      }
+      .pro8{
+        grid-area: pro8;
+      }
+
 
     }
 
