--- a/styles.scss
+++ b/styles.scss
@@ -7,6 +7,12 @@ $grey: #727272;
 $laks: #ffd3b6;
 
 
+@font-face {
+  font-family: 'Apex New';
+  scr:  url('fonts/Apexnew.woff') format('woff')
+        url('fonts/Apexnew.woff2') format('woff2')
+}
+
 
 
 body{
@@ -41,7 +47,7 @@ body{
     padding: 15px;
     text-decoration: none;
     color: $darkgrey;
-    font-family: "Apex New";
+    font-family: "Apex New", Tahoma, sans-serif;
   }
 }
 .navliactive a{
@@ -76,7 +82,7 @@ main{
     width: 60%;
   }
   text-align: center;
-  font-family: "Apex New";
+  font-family: "Apex New", Tahoma, sans-serif;
   p{
     color: $grey;
     margin: 0;
@@ -104,7 +110,7 @@ form{
   .formlabel{
     width: 80%;
     margin: auto;
-    font-family: "Apex New";
+    font-family: "Apex New", Tahoma, sans-serif;
     margin-top: 0;
   }
   #description{
@@ -136,7 +142,7 @@ form{
 
 .forsidemain{
   h1{
-    font-family: "American Purpose Casual 01";
+    font-family: "American Purpose Casual 01", Tahoma, sans-serif;
     padding-top: 3%;
     margin-bottom: 1%;
     font-size: xx-large;
@@ -182,7 +188,7 @@ form{
     justify-content: space-between;
     margin-top: 2%;
   }
-  font-family: "Apex New";
+  font-family: "Apex New", Tahoma, sans-serif;
   text-align: center;
   img{
     width: 100%;
@@ -225,13 +231,13 @@ footer{
     }
   }
   h3{
-    font-family: "American Purpose Casual 01";
+    font-family: "American Purpose Casual 01", Tahoma, sans-serif;
     margin: 5%;
     text-align: center;
     font-size: x-large;
   }
   p{
-    font-family: "Apex New";
+    font-family: "Apex New", Tahoma, sans-serif;
     margin-top: 0;
   }
   img{
@@ -365,6 +371,17 @@ footer{
         grid-area: pro8;
       }
 
+      .sortering{
+        flex-direction: row;
+        flex-wrap: wrap;
+        select{
+          width: 21%;
+        }
+        button{
+          width: 20%;
+        }
+      }
+
 
     }
 
@@ -384,7 +401,47 @@ footer{
 
     }
 
+    .shopmain{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas:
+                          "sortering sortering sortering"
+                          "pro1 pro2 pro3"
+                          "pro4 pro5 pro6"
+                          "pro7 pro8 .";
+
+      .sortering{
+        grid-area: sortering;
+      }
+      .pro1{
+        grid-area: pro1;
+      }
+      .pro2{
+        grid-area: pro2;
+      }
+      .pro3{
+        grid-area: pro3;
+      }
+      .pro4{
+        grid-area: pro4;
+      }
+      .pro5{
+        grid-area: pro5;
+      }
+      .pro6{
+        grid-area: pro6;
+      }
+      .pro7{
+        grid-area: pro7;
+      }
+      .pro8{
+        grid-area: pro8;
+      }
+    }
+
   }
+
+
 
 }
 
