--- a/styles.scss
+++ b/styles.scss
@@ -47,7 +47,7 @@ body{
     padding: 15px;
     text-decoration: none;
     color: $darkgrey;
-    font-family: "Apex New", Tahoma, sans-serif;
+    font-family: Apexnew, Tahoma, sans-serif;
   }
 }
 .navliactive a{
@@ -82,7 +82,7 @@ main{
     width: 60%;
   }
   text-align: center;
-  font-family: "Apex New", Tahoma, sans-serif;
+  font-family: Apexnew, Tahoma, sans-serif;
   p{
     color: $grey;
     margin: 0;
@@ -110,7 +110,7 @@ form{
   .formlabel{
     width: 80%;
     margin: auto;
-    font-family: "Apex New", Tahoma, sans-serif;
+    font-family: Apexnew, Tahoma, sans-serif;
     margin-top: 0;
   }
   #description{
@@ -188,7 +188,7 @@ form{
     justify-content: space-between;
     margin-top: 2%;
   }
-  font-family: "Apex New", Tahoma, sans-serif;
+  font-family: Apexnew, Tahoma, sans-serif;
   text-align: center;
   img{
     width: 100%;
@@ -237,7 +237,7 @@ footer{
     font-size: x-large;
   }
   p{
-    font-family: "Apex New", Tahoma, sans-serif;
+    font-family: Apexnew, Tahoma, sans-serif;
     margin-top: 0;
   }
   img{
