--- a/styles.scss
+++ b/styles.scss
@@ -7,12 +7,6 @@ $grey: #727272;
 $laks: #ffd3b6;
 
 
-@font-face {
-  font-family: 'Apex New';
-  scr:  url('fonts/Apexnew.woff') format('woff')
-        url('fonts/Apexnew.woff2') format('woff2')
-}
-
 
 
 body{
@@ -47,20 +41,50 @@ body{
     padding: 15px;
     text-decoration: none;
     color: $darkgrey;
-    font-family: Apexnew, Tahoma, sans-serif;
+    font-family: "Roboto Slab", Tahoma, sans-serif;
   }
 }
 .navliactive a{
-  font-weight: bold;
+  background-color: $lightlightgrey;
+  border-radius: 10px;
 }
 
-.maindyi{
+.maindiy{
   text-align: center;
-  width: 300px;
-  border: 5px solid green;
-  padding: 25px;
-  margin: 25px;
+  width: 100%;
+  padding: 0;
+  h2{
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto Slab", Tahoma, sans-serif;
 }
+  .tekstdiy{
+    padding: 8%;
+  }
+  p{
+    font-family: "Roboto Condensed";
+    padding: 0;
+    margin: 0;
+    text-align: left;
+  }
+  .w13{
+    p{
+      text-align: center;
+      margin: 2%;
+    }
+    a{
+      font-family: "Roboto Condensed";
+    }
+  }
+}
+.white{
+  background-color: white;
+
+}
+.grey{
+
+}
+
 #shoppingcart{
   display: none;
 }
@@ -82,7 +106,7 @@ main{
     width: 60%;
   }
   text-align: center;
-  font-family: Apexnew, Tahoma, sans-serif;
+  font-family: "Roboto Condensed", Tahoma, sans-serif;
   p{
     color: $grey;
     margin: 0;
@@ -110,7 +134,7 @@ form{
   .formlabel{
     width: 80%;
     margin: auto;
-    font-family: Apexnew, Tahoma, sans-serif;
+    font-family: "Roboto Condensed", Tahoma, sans-serif;
     margin-top: 0;
   }
   #description{
@@ -142,7 +166,7 @@ form{
 
 .forsidemain{
   h1{
-    font-family: "American Purpose Casual 01", Tahoma, sans-serif;
+    font-family: "Roboto Slab", Tahoma, sans-serif;
     padding-top: 3%;
     margin-bottom: 1%;
     font-size: xx-large;
@@ -188,7 +212,7 @@ form{
     justify-content: space-between;
     margin-top: 2%;
   }
-  font-family: Apexnew, Tahoma, sans-serif;
+  font-family: "Roboto Condensed", Tahoma, sans-serif;
   text-align: center;
   img{
     width: 100%;
@@ -231,13 +255,13 @@ footer{
     }
   }
   h3{
-    font-family: "American Purpose Casual 01", Tahoma, sans-serif;
+    font-family: "Roboto Slab", Tahoma, sans-serif;
     margin: 5%;
     text-align: center;
     font-size: x-large;
   }
   p{
-    font-family: Apexnew, Tahoma, sans-serif;
+    font-family: "Roboto Condensed", Tahoma, sans-serif;
     margin-top: 0;
   }
   img{
@@ -384,20 +408,77 @@ footer{
 
 
     }
-
-  }
-
+    .maindiy{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-areas: "head head"
+                              "w1 w2"
+                              "w3 w4"
+                              "w5 w6"
+                              "w7 w8"
+                              "w9 w10"
+                              "w11 w12"
+                              "w13 w13";
+      .head{
+          grid-area: head;
+        }
+      .w1{
+        grid-area: w1;
+      }
+      .w2{
+        grid-area: w2;
+      }
+      .w3{
+        grid-area: w4;
+      }
+      .w4{
+        grid-area: w3;
+      }
+      .w5{
+        grid-area: w5;
+      }
+      .w6{
+        grid-area: w6;
+      }
+      .w7{
+        grid-area: w8;
+      }
+      .w8{
+        grid-area: w7;
+      }
+      .w9{
+        grid-area: w9;
+      }
+      .w10{
+        grid-area: w10;
+      }
+      .w11{
+        grid-area: w12;
+      }
+      .w12{
+        grid-area: w11;
+      }
+      .w13{
+        grid-area: w13;
+      }
+    }
+    }
   @media screen and (min-width: 1000px) {
-
     .forsidemain{
       display: grid;
       grid-template-columns: 50% 16.67% 33.33%;
       grid-template-areas:
                           "pic1 pic2 pic2"
                           "upload upload produktfront";
-      .produktfront img{
-        width: 90%;
+      .produktfront{
+          img{
+            width: 90%;
+          }
+        h1{
+          margin-top: 9%;
+        }
       }
+
 
     }
 
@@ -438,6 +519,59 @@ footer{
         grid-area: pro8;
       }
     }
+    .maindiy{
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: "head head head"
+                            "w1 w2 w3"
+                            "w4 w5 w6"
+                              "w7 w8 w9"
+                              "w10 w11 w12"
+                              "w13 w13 w13";
+      .head{
+        grid-area: head;
+      }
+      .w1{
+        grid-area: w1;
+      }
+      .w2{
+        grid-area: w2;
+      }
+      .w3{
+        grid-area: w3;
+      }
+      .w4{
+        grid-area: w4;
+      }
+      .w5{
+        grid-area: w5;
+      }
+      .w6{
+        grid-area: w6;
+      }
+      .w7{
+        grid-area: w7;
+      }
+      .w8{
+        grid-area: w8;
+      }
+      .w9{
+        grid-area: w9;
+      }
+      .w10{
+        grid-area: w10;
+      }
+      .w11{
+        grid-area: w11;
+      }
+      .w12{
+        grid-area: w12;
+      }
+      .w13{
+        grid-area: w13;
+      }
+    }
+
 
   }
 
@@ -445,12 +579,3 @@ footer{
 
 }
 
-.externe{
-  align-self: left;
-  text-align: center;
-  width: 300px;
-  border: 5px solid green;
-  padding: 25px;
-  margin: 25px;
-
-}
